Update to favicon
Changes:
Updated favicon and removed the previous icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/Button.svg" />
+    <link rel="icon" type="image/svg+xml+png" href="/button.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mystery Button</title>
   </head>
